# Tremolo-1.0

./: CMakeLists.txt  README.md
src/: Controller.h  FeatureExtractor.h  OnePoleSmoother.h  Tremolo.cpp  Tremolo.h  WAVIO.cpp  WavIO.h  main.cpp
